fix horizontal scroll on smaller screens

--- a/src/index.css
+++ b/src/index.css
@@ -3,28 +3,37 @@
   src: local('Adobe-Dia'), url(./fonts/Adobe-Dia.ttf) format('truetype');
 }
 body {
-  font-size: 55px;
+  font-size: 10vw;
   background-color: #000605;
   font-family: "Adobe-Dia";
   text-align: start;
   max-width: 900px;
   max-height: 300px;
 }
+@media screen and (min-width: 500px) {
+  body {
+    font-size: 55px;
+  }
+}
 .container {
   width: 100%;
 }
 .password {
   margin-top:17%;
-  margin-left: 45%;
+  margin-left: 5%;
   margin-right: 0;
   margin-bottom: 0;
   width:90%;
+}
+@media screen and (min-width: 1000px) {
+  .password {
+    margin-left: 45%;
+  }
 }
 .password-title {
   display:inline;
   margin-top: 0;
   margin-bottom: 0;
-  max-height: fit-content;
 }
 input{
   display:inline;
@@ -48,10 +57,13 @@ input:focus{
   max-width: 580px;
 }
 .login {
-  margin-left: 35%;
   margin-top: 15%;
 }
-
+@media screen and (min-width: 1000px) {
+  .login {
+    margin-left: 35%;
+  }
+}
 .login p{
   margin: 0;
   margin-top: -0.2em;
